fixed text overflow

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h1 {
     text-align: right;
     font-size: 36px;
     box-shadow: inset 2px 2px 8px var(--onyx) ;
+    overflow: hidden;
 }
 
 .buttons {
@@ -126,7 +127,7 @@ h1 {
     grid-column: c1/c4;
 }
 
-#signed, #equals, {
+#signed, #equals {
     grid-row: r5/rend;
 }
 
